# llm_sandbox

./: AGENTS.md  README.md  config.yaml  main.py  pyproject.toml
.claude/: settings.local.json
docs/: SPECIFICATION.md
src/: __init__.py  config.py  harness.py  llama_harness.py  logger.py  mlx_harness.py  torch_harness.py  util.py
