[project]
name = "llm_sandbox"
version = "0.1.0"
description = "LLM Sandbox"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "accelerate>=1.12.0",
    "gguf>=0.10.0",
    "kernels>=0.12.1",
    "llama-cpp-python>=0.3.22",
    "mlx-lm>=0.31.3",
    "pylint>=4.0.5",
    "torch>=2.10.0",
    "transformers>=5.1.0",
]

[tool.uv]
package = true


[tool.setuptools]
packages = ["src"]
